# emulateur-chip8

./: CMakeLists.txt  README.md  main.c  proc.c  proc.h  prop.h  ram.c  ram.h
include/keyboard/: keyboard.h
include/speaker/: speaker.h
